include_directories(
    ../kdecore
    ../kdeui
)
set(BASE_LIBS
    Qt::Qt1
    X11::X11
    kdecore
    kdeui
)

QT1_WRAP_MOC(MOC_CHARSET kcharsetstest.h)
QT1_WRAP_MOC(MOC_CONFIG kconfigtest.h)
QT1_WRAP_MOC(MOC_CONTAINER kcontainertest.h)
QT1_WRAP_MOC(MOC_DATEPICK kdatepicktestdlg.h)
QT1_WRAP_MOC(MOC_ICONLOADER kiconloadertestmain.h)
QT1_WRAP_MOC(MOC_LED kledtest.h)
QT1_WRAP_MOC(MOC_LINE klinetest.h)
QT1_WRAP_MOC(MOC_LOCALE klocaletest.h)
QT1_WRAP_MOC(MOC_MSGBOX kmsgboxtest.h)
QT1_WRAP_MOC(MOC_PANNER kpannertest.h)
QT1_WRAP_MOC(MOC_PROCESS kprocesstest.h)
QT1_WRAP_MOC(MOC_RULER krulertest.h)
QT1_WRAP_MOC(MOC_SPINBOX kspinboxtest.h)
QT1_WRAP_MOC(MOC_STATUSBAR kstatusbartest.h)
QT1_WRAP_MOC(MOC_TABCTL ktabctltest.h)
QT1_WRAP_MOC(MOC_TREELIST ktreelisttest.h)
QT1_WRAP_MOC(MOC_WINDOW kwindowtest.h)

add_executable(kbuttonboxtest kbuttonboxtest.cpp)
add_executable(kcharsetstest kcharsetstest.cpp ${MOC_CHARSET})
add_executable(kcolordlgtest kcolordlgtest.cpp)
add_executable(kconfigtest kconfigtest.cpp ${MOC_CONFIG})
add_executable(kcontainertest kcontainertest.cpp ${MOC_CONTAINER})
add_executable(kdatepicktest kdatepicktest.cpp kdatepicktestdlg.cpp ${MOC_DATEPICK})
add_executable(kfontdialogtest kfontdialogtest.cpp)
add_executable(kiconloadertest kiconloadertest.cpp kiconloadertestmain.cpp ${MOC_ICONLOADER})
add_executable(kledlamptest kledlamptest.cpp)
add_executable(kledtest kledtest.cpp ${MOC_LED})
add_executable(klinetest klinetest.cpp ${MOC_LINE})
add_executable(klocaletest klocaletest.cpp ${MOC_LOCALE})
add_executable(kmsgboxtest kmsgboxtest.cpp ${MOC_MSGBOX})
add_executable(knotebooktest knotebooktest.cpp)
add_executable(kpannertest kpannertest.cpp ${MOC_PANNER})
add_executable(kpopuptest kpopuptest.cpp)
add_executable(kprocesstest kprocesstest.cpp ${MOC_PROCESS})
add_executable(kprogresstest kprogresstest.cpp)
add_executable(kquickhelptest kquickhelptest.cpp)
add_executable(krulertest krulertest.cpp ${MOC_RULER})
add_executable(kseparatortest kseparatortest.cpp)
add_executable(ksimpleconfigtest ksimpleconfigtest.cpp)
add_executable(kspinboxtest kspinboxtest.cpp ${MOC_SPINBOX})
add_executable(kstatusbartest kstatusbartest.cpp ${MOC_STATUSBAR})
add_executable(ktabctltest ktabctltest.cpp ${MOC_TABCTL})
add_executable(ktreelisttest ktreelisttest.cpp ${MOC_TREELIST})
add_executable(kurltest kurltest.cpp)
add_executable(kwindowtest kwindowtest.cpp ${MOC_WINDOW})
add_executable(kwizardtest kwizardtest.cpp)

target_link_libraries(kbuttonboxtest ${BASE_LIBS})
target_link_libraries(kcharsetstest ${BASE_LIBS})
target_link_libraries(kcolordlgtest ${BASE_LIBS})
target_link_libraries(kconfigtest ${BASE_LIBS})
target_link_libraries(kcontainertest ${BASE_LIBS})
target_link_libraries(kdatepicktest ${BASE_LIBS})
target_link_libraries(kfontdialogtest ${BASE_LIBS})
target_link_libraries(kiconloadertest ${BASE_LIBS})
target_link_libraries(kledlamptest ${BASE_LIBS})
target_link_libraries(kledtest ${BASE_LIBS})
target_link_libraries(klinetest ${BASE_LIBS})
target_link_libraries(klocaletest ${BASE_LIBS})
target_link_libraries(kmsgboxtest ${BASE_LIBS})
target_link_libraries(knotebooktest ${BASE_LIBS})
target_link_libraries(kpannertest ${BASE_LIBS})
target_link_libraries(kpopuptest ${BASE_LIBS})
target_link_libraries(kprocesstest ${BASE_LIBS})
target_link_libraries(kprogresstest ${BASE_LIBS})
target_link_libraries(kquickhelptest ${BASE_LIBS})
target_link_libraries(krulertest ${BASE_LIBS})
target_link_libraries(kseparatortest ${BASE_LIBS})
target_link_libraries(ksimpleconfigtest ${BASE_LIBS})
target_link_libraries(kspinboxtest ${BASE_LIBS})
target_link_libraries(kstatusbartest ${BASE_LIBS})
target_link_libraries(ktabctltest ${BASE_LIBS})
target_link_libraries(ktreelisttest ${BASE_LIBS})
target_link_libraries(kurltest ${BASE_LIBS})
target_link_libraries(kwindowtest ${BASE_LIBS})
target_link_libraries(kwizardtest ${BASE_LIBS})
